--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,14 @@ a {
 }
 
 .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+    min-width: 320px;
+    max-width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .visually-hidden {
     position: absolute;
