--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ body {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 p,
@@ -54,13 +56,15 @@ h4,
 h5,
 h6 {
     padding: 0;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 ul,
 ol {
     list-style-type: none;
-    padding: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 a {
@@ -69,12 +73,14 @@ a {
 
 .container {
     width: 100%;
-    min-width: 320px;
-    max-width: 1170px;
+    /* min-width: 320px;
+    max-width: 1170px; */
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+    outline: 2px solid red;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 
@@ -260,12 +266,8 @@ a {
 /**----2 Section principles----*/
 .principles {
     background-color: var(--white-background);
-    padding: 120px 0;
-}
-
-.principles-title {
-    color: var(--white-background);
-    letter-spacing: 0.02em;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .principles-list {
@@ -278,10 +280,6 @@ a {
     width: 100%;
     /* width: calc((100% - 72px) / 4); */
 }
-
-/* .principles-list-item:not(:last-child) {
-    margin-right: 24px;
-} */
 
 .principles-image {
     display: none;
