--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,8 @@
 
     /* -------2 section Principles------- */
     .principles-list {
+        display: flex;
+        flex-wrap: wrap;
         row-gap: 24px;
         column-gap: 72px;
     }
