--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,11 @@
+@media screen and (min-width: 428px) {
+    .container {
+        max-width: 428px;
+    }
+
+    /* -------2 section Principles------- */
+}
+
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
@@ -5,22 +13,56 @@
 
     /* -------2 section Principles------- */
     .principles-list {
-        display: flex;
-        flex-wrap: wrap;
-        row-gap: 24px;
-        column-gap: 72px;
+        gap: 24px;
     }
 
     .principles-list-item {
         width: calc((100% - 24px) / 2);
     }
+
+    .principles-list-item:first-child,
+    .principles-list-item:nth-child(2) {
+        margin-bottom: 72px;
+    }
 }
-
-
 
 
 @media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
+    }
+
+    /* -------2 section Principles------- */
+    .principles {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
+    .principles-list-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .principles-list-item:first-child,
+    .principles-list-item:nth-child(2) {
+        margin-bottom: 0;
+    }
+
+    .principles-image {
+        display: flex;
+    }
+
+    .principles-name {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        margin: 0;
+        margin-bottom: 8px;
+        text-align: left;
+    }
+
+    .principles-text {
+        font-weight: 400;
+        letter-spacing: 0.02em;
     }
 }
