--- a/css/styles.css
+++ b/css/styles.css
@@ -73,14 +73,12 @@ a {
 
 .container {
     width: 100%;
-    /* min-width: 320px;
-    max-width: 1170px; */
-    padding-left: 15px;
-    padding-right: 15px;
+    min-width: 320px;
+    max-width: 1170px;
+    padding-left: 16px;
+    padding-right: 16px;
     margin: 0 auto;
     outline: 2px solid red;
-    /* margin-left: auto;
-    margin-right: auto; */
 }
 
 
@@ -278,7 +276,6 @@ a {
 
 .principles-list-item {
     width: 100%;
-    /* width: calc((100% - 72px) / 4); */
 }
 
 .principles-image {
@@ -295,7 +292,7 @@ a {
 .principles-image svg {
     display: block;
     margin: 0 auto;
-    padding: 24px 0;
+    /* padding: 24px 0; */
 }
 
 .principles-name {
