--- a/css/styles.css
+++ b/css/styles.css
@@ -349,8 +349,8 @@ a {
 /**----4 Our team section----*/
 .team-section {
     background-color: var(--light);
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
     margin: 0 auto;
 }
 
@@ -367,13 +367,15 @@ a {
 
 .team-section-list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 72px;
 }
 
 .team-list-item {
     background: var(--white-background);
     border-radius: 0px 0px 4px 4px;
-    max-width: calc((100% - 72px) / 4);
+    max-width: 264px;
+    margin: 0 auto;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -390,7 +392,6 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--dark);
-    margin: 0;
     margin-bottom: 8px;
 }
 
@@ -398,6 +399,7 @@ a {
     text-align: center;
     color: var(--text-color);
     margin: 0;
+    margin-bottom: 8px;
 }
 
 .employee-links-list {
