--- a/css/media.css
+++ b/css/media.css
@@ -33,6 +33,25 @@
     .team-list-item {
         margin: 0;
     }
+
+    /* -------5 section Customers------- */
+    .customers {
+        padding-left: 93px;
+        padding-right: 93px;
+    }
+
+    .customers-list {
+        margin: 0 auto;
+        max-width: 552px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+
+    .customers-list-item {
+        width: calc((100% - 48px) / 3);
+        max-width: 168px;
+    }
 }
 
 
@@ -95,5 +114,19 @@
     .team-list-item {
         max-width: calc((100% - 72px) / 4);
         margin-bottom: 72px;
+    }
+
+    /* -------5 section Customers------- */
+    .customers {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .customers-list {
+        max-width: none;
+    }
+
+    .customers-list-item {
+        width: calc((100% - 120px) / 6);
     }
 }
