--- a/css/styles.css
+++ b/css/styles.css
@@ -495,7 +495,6 @@ a {
 /**----Footer----*/
 .footer {
     background-color: var(--dark);
-    /* padding: 100px 0; */
     padding-top: 98px;
     padding-bottom: 96px;
 }
@@ -587,14 +586,10 @@ a {
 }
 
 .footer-right {
-    /* margin-left: auto;
-    margin-right: 3px; */
     width: 100%;
 }
 
 .footer-form {
-    /*align-items: flex-end;
-    gap: 24px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -619,7 +614,7 @@ a {
     height: 40px;
     border-radius: 4px;
     border: 1px solid var(--white-background);
-    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); */
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     opacity: 0.3;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     background-color: transparent;
@@ -644,6 +639,7 @@ a {
 .footer-subscribe-btn {
     max-width: 165px;
     height: 40px;
+    padding: 8px 24px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -668,7 +664,6 @@ a {
 }
 
 .footer-btn-icon {
-    margin-left: 16px;
     fill: var(--white-background);
 }
 
