--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,12 @@
         max-width: 428px;
     }
 
+    /* -------1 section Hero------- */
+    .title {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
     /* -------Footer------- */
     .footer-form-input {
         width: 398px;
@@ -12,6 +18,15 @@
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
+    }
+
+    /* -------1 section Hero------- */
+    .title {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+        max-width: 496px;
+        padding: 0;
     }
 
     /* -------2 section Principles------- */
@@ -91,6 +106,15 @@
 @media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
+    }
+
+    /* -------1 section Hero------- */
+    .hero-container {
+        padding: 188px 0;
+    }
+
+    .title {
+        margin-bottom: 48px;
     }
 
     /* -------2 section Principles------- */
