--- a/css/styles.css
+++ b/css/styles.css
@@ -218,20 +218,20 @@ a {
 }
 
 .hero-container {
-    padding: 188px 0;
-
+    padding: 112px 0;
 }
 
 .title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     color: var(--white-background);
     letter-spacing: 0.02em;
     margin: 0 auto;
-
-    max-width: 496px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 72px;
 }
 
 .main-section-button {
@@ -246,11 +246,12 @@ a {
     cursor: pointer;
 
     display: block;
-    min-width: 169px;
+    /* min-width: 169px; */
+    padding: 16px 32px;
     height: 56px;
     border: none;
     border-radius: 4px;
-    margin: 48px auto 0;
+    margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
