--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,8 @@ a {
 
 /**----1 Main section----*/
 .main-section {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     max-width: 1440px;
