--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,15 @@ a {
     margin: 0 auto;
 }
 
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .main-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/hero-bg-mob-2x.jpg);
+    }
+}
+
 .hero-container {
     padding: 112px 0;
 }
