--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,10 @@ a {
 .header-container {
     display: flex;
     margin: 0 auto;
+    justify-content: space-between;
 }
 
+/*! перенести лишние стили в медиа запрос  */
 .header-nav {
     display: flex;
     align-items: center;
@@ -137,11 +139,142 @@ a {
     color: var(--dark);
 }
 
+.menu-open-btn {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    background-color: transparent;
+    border: none;
+}
+
+.menu-open-icon {
+    fill: var(--dark);
+}
+
+.mob-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 99;
+    background-color: var(--white-background);
+    padding: 24px 24px 40px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu-close-btn {
+    display: block;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.menu-close-icon {
+    fill: var(--dark);
+}
+
+.mob-menu-wrap {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.mob-menu-list {}
+
+.mob-menu-list-item:not(last-child) {
+    margin-bottom: 40px;
+}
+
+.mob-menu-link {
+    color: var(--dark);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.current-mob {
+    color: var(--pressed-state);
+}
+
+/* .mob-menu-address {} */
+
+.mob-menu-address-list {
+    margin-bottom: 48px;
+}
+
+/* .mob-menu-address-list-item {} */
+
+.mob-menu-address-tel {
+    color: var(--primary-brand);
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    display: inline-block;
+    margin-bottom: 40px;
+}
+
+.mob-menu-address-mail {
+    color: var(--text-color);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.mob-menu-links-list {
+    display: flex;
+    gap: 24px;
+}
+
+.mob-menu-links-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.mob-menu-social-link {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-brand);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-soc-icon {
+    display: block;
+    fill: var(--light);
+}
+
+.mob-menu-social-link:hover,
+.mob-menu-social-link:focus {
+    background-color: var(--pressed-state);
+}
+
+/* --------------------------------- */
+
 .header-nav-list {
+    display: none;
     font-family: var(--main-font);
     font-weight: 500;
     color: var(--dark);
-    display: flex;
+    /* display: flex; */
     padding: 0;
     margin: 0;
 }
@@ -152,7 +285,7 @@ a {
 
 .header-nav-link {
     color: var(--dark);
-    padding: 24px 0;
+    /* padding: 24px 0; */
     display: block;
     margin: 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -183,7 +316,8 @@ a {
 }
 
 .header-address {
-    display: flex;
+    /* display: flex; */
+    display: none;
     font-style: normal;
     margin-left: 300px;
     align-items: center;
