--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,10 @@ a {
     fill: currentColor;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 /**----Header----*/
 .header {
     background: var(--white-background);
@@ -156,7 +160,7 @@ a {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 99;
+    z-index: 2;
     background-color: var(--white-background);
     padding: 24px 24px 40px 40px;
     display: flex;
@@ -188,7 +192,7 @@ a {
     justify-content: space-between;
 }
 
-.mob-menu-list {}
+/* .mob-menu-list {} */
 
 .mob-menu-list-item:not(last-child) {
     margin-bottom: 40px;
