--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,7 @@
         max-width: 428px;
     }
 
+    /* -------Mobile menu------- */
     .mob-menu-address-tel {
         font-size: 36px;
     }
@@ -26,6 +27,78 @@
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
+    }
+
+    /* -------Mobile menu------- */
+    .menu-open-btn {
+        display: none;
+    }
+
+    /* -------Header------- */
+    .header-nav-list {
+        font-family: var(--main-font);
+        font-weight: 500;
+        color: var(--dark);
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+
+    .header-nav-list-item:not(:last-child) {
+        margin-right: 40px;
+    }
+
+    .header-nav-link {
+        color: var(--dark);
+        display: block;
+        margin: 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-nav-link:active,
+    .header-nav-link:hover,
+    .header-nav-link:focus,
+    .header-address-list-link:hover,
+    .header-address-list-link:focus {
+        color: var(--pressed-state);
+    }
+
+    .current {
+        position: relative;
+        color: var(--pressed-state);
+    }
+
+    .current::after {
+        content: '';
+        position: absolute;
+        bottom: -33px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--pressed-state);
+    }
+
+    .header-address {
+        display: flex;
+        font-style: normal;
+        margin-left: 121px;
+        align-items: center;
+    }
+
+    .header-address-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        margin: 0;
+        padding: 16px 0;
+    }
+
+    .header-address-list-link {
+        color: var(--text-color);
+        display: block;
+        margin: 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     /* -------1 section Hero------- */
@@ -121,13 +194,20 @@
     .footer-form-input {
         max-width: 264px;
     }
-
 }
 
 
 @media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
+    }
+
+    /* -------Header------- */
+    .header-address-list {
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+        padding: 24px 0;
     }
 
     /* -------1 section Hero------- */
