--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,8 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 2;
     background-color: var(--white-background);
     padding: 24px 24px 40px 40px;
