--- a/css/media.css
+++ b/css/media.css
@@ -97,6 +97,7 @@
     }
 
     .header-address-list-link {
+        font-size: 12px;
         color: var(--text-color);
         display: block;
         margin: 0;
@@ -217,6 +218,10 @@
         flex-direction: row;
         gap: 40px;
         padding: 24px 0;
+    }
+
+    .header-address-list-link {
+        font-size: 16px;
     }
 
     .current::after {
