--- a/css/media.css
+++ b/css/media.css
@@ -203,6 +203,28 @@
         width: 100%;
         max-width: 408px;
     }
+
+    /* -------Portfolio------- */
+    .products-portfolio {
+        padding-top: 64px;
+        padding-bottom: 96px;
+    }
+
+    .filters-list {
+        margin-bottom: 64px;
+    }
+
+    .products-portfolio-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        margin: 0;
+    }
+
+    .products-portfolio-list-item {
+        max-width: calc((100% - 24px) / 2);
+        margin-bottom: 0;
+    }
 }
 
 
@@ -348,5 +370,24 @@
 
     .footer-form {
         gap: 24px;
+    }
+
+    .filters-list {
+        display: flex;
+        /* flex-wrap: wrap; */
+        gap: 24px;
+        justify-content: center;
+        margin-bottom: 72px;
+    }
+
+    .products-portfolio-list {
+        /* display: flex; */
+        /* flex-wrap: wrap; */
+        column-gap: 24px;
+        row-gap: 48px;
+    }
+
+    .products-portfolio-list-item {
+        max-width: calc((100% - 48px) / 3);
     }
 }
