--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ a {
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
 }
 
 
@@ -971,17 +971,16 @@ a {
 
 /** ----Portfolio.html---- */
 .products-portfolio {
-    padding: 96px 0 120px 0;
+    /* padding: 96px 0 120px 0; */
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
 
 .filters-list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 72px;
-}
-
-.filters-list-item:not(:last-child) {
-    margin-right: 24px;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-bottom: 48px;
 }
 
 /** ----filters section---- */
@@ -1014,17 +1013,20 @@ a {
 
 /** ----products-portfolio section---- */
 .products-portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* column-gap: 24px; */
+    /* row-gap: 48px; */
+    display: block;
+    width: 100%;
     margin: 0;
 }
 
 .products-portfolio-list-item {
     background: var(--white-background);
-    max-width: calc((100% - 48px) / 3);
+    /* max-width: calc((100% - 48px) / 3); */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 48px;
 }
 
 .products-portfolio-link {
