--- a/css/styles.css
+++ b/css/styles.css
@@ -112,13 +112,13 @@ a {
 .header {
     background: var(--white-background);
     border-bottom: 1px solid var(--accent-color);
-    margin: 0 auto;
+    /* margin: 0 auto; */
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     justify-content: space-between;
 }
 
@@ -135,7 +135,7 @@ a {
     letter-spacing: 0.03em;
     color: var(--primary-brand);
     text-transform: uppercase;
-    margin-right: 76px;
+    /* margin-right: 76px; */
 }
 
 .header-logo-accent {
