--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ a {
     letter-spacing: 0.03em;
     color: var(--primary-brand);
     text-transform: uppercase;
-    /* margin-right: 76px; */
+    margin-right: 76px;
 }
 
 .header-logo-accent {
@@ -999,7 +999,8 @@ a {
     background: var(--light);
     border: 1px solid var(--accent-color);
     cursor: pointer;
-    padding: 12px 24px;
+    padding: 8px 16px;
+    /* padding: 12px 24px; */
     border-radius: 4px;
 }
 
@@ -1018,12 +1019,13 @@ a {
     /* column-gap: 24px; */
     /* row-gap: 48px; */
     display: block;
-    width: 100%;
+    /* width: 100%; */
     margin: 0;
 }
 
 .products-portfolio-list-item {
     background: var(--white-background);
+    max-width: 100%;
     /* max-width: calc((100% - 48px) / 3); */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 48px;
