--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,11 @@ a {
     text-decoration: none;
 }
 
+div {
+    box-sizing: border-box;
+}
+
+
 .container {
     width: 100%;
     min-width: 320px;
@@ -112,13 +117,13 @@ a {
 .header {
     background: var(--white-background);
     border-bottom: 1px solid var(--accent-color);
-    /* margin: 0 auto; */
+    margin: 0 auto;
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     justify-content: space-between;
 }
 
@@ -170,6 +175,8 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-close-btn {
@@ -971,7 +978,6 @@ a {
 
 /** ----Portfolio.html---- */
 .products-portfolio {
-    /* padding: 96px 0 120px 0; */
     padding-top: 48px;
     padding-bottom: 48px;
 }
@@ -1000,7 +1006,6 @@ a {
     border: 1px solid var(--accent-color);
     cursor: pointer;
     padding: 8px 16px;
-    /* padding: 12px 24px; */
     border-radius: 4px;
 }
 
@@ -1014,19 +1019,13 @@ a {
 
 /** ----products-portfolio section---- */
 .products-portfolio-list {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* column-gap: 24px; */
-    /* row-gap: 48px; */
     display: block;
-    /* width: 100%; */
     margin: 0;
 }
 
 .products-portfolio-list-item {
     background: var(--white-background);
     max-width: 100%;
-    /* max-width: calc((100% - 48px) / 3); */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 48px;
 }
